working on edit my profile

--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="col-sm-5 col-6 text-right m-b-30">
-        <a routerLink="./edit" class="btn btn-primary btn-rounded"><i class="fa fa-plus"></i> Edit Profile</a>
+        <a routerLink="./edit/{{id}}" class="btn btn-primary btn-rounded"><i class="fa fa-plus"></i> Edit Profile</a>
     </div>
 </div>
 <div class="card-box profile-header">
