--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
@@ -3,7 +3,7 @@
         <h4 class="page-title">Edit Profile</h4>
     </div>
 </div>
-<form>
+<form [formGroup]="myProfileForm">
     <div class="card-box">
         <h3 class="card-title">Basic Informations</h3>
         <div class="row">
@@ -20,23 +20,46 @@
                         <div class="col-md-6">
                             <div class="form-group form-focus">
                                 <label class="focus-label">First Name</label>
-                                <input type="text" class="form-control floating" value="John">
+                                <input type="text" class="form-control floating"
+                                formControlName="FirstName">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-focus">
                                 <label class="focus-label">Last Name</label>
-                                <input type="text" class="form-control floating" value="Doe">
+                                <input type="text" class="form-control floating"
+                                formControlName="LastName">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group form-focus">
-                                <label class="focus-label">Birth Date</label>
-                                <div class="cal-icon">
-                                    <input class="form-control floating datetimepicker" type="text" value="05/06/1985">
-                                </div>
+                                <label class="focus-label">Professional Stateme</label>
+                                <input type="text" class="form-control floating"
+                                formControlName="ProfessionalStateme">
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-focus">
+                                <label class="focus-label">Phone</label>
+                                <input type="text" class="form-control floating"
+                                formControlName="Phone">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-focus">
+                                <label class="focus-label">Email</label>
+                                <input type="text" class="form-control floating"
+                                formControlName="Email">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-focus">
+                                <label class="focus-label">Address</label>
+                                <input type="text" class="form-control floating"
+                                formControlName="Address">
+                            </div>
+                        </div>
+                      
                         <div class="col-md-6">
                             <div class="form-group form-focus select-focus">
                                 <label class="focus-label">Gendar</label>
@@ -51,82 +74,31 @@
             </div>
         </div>
     </div>
-    <div class="card-box">
-        <h3 class="card-title">Contact Informations</h3>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Address</label>
-                    <input type="text" class="form-control floating" value="4487 Snowbird Lane">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">State</label>
-                    <input type="text" class="form-control floating" value="New York">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Country</label>
-                    <input type="text" class="form-control floating" value="United States">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Pin Code</label>
-                    <input type="text" class="form-control floating" value="10523">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Phone Number</label>
-                    <input type="text" class="form-control floating" value="631-889-3206">
-                </div>
-            </div>
-        </div>
-    </div>
+
     <div class="card-box">
         <h3 class="card-title">Education Informations</h3>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group form-focus">
                     <label class="focus-label">Institution</label>
-                    <input type="text" class="form-control floating" value="Oxford University">
+                    <input type="text" class="form-control floating"
+                    formControlName="Institution">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group form-focus">
-                    <label class="focus-label">Subject</label>
-                    <input type="text" class="form-control floating" value="Computer Science">
+                    <label class="focus-label">Qualification Name</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="QualificationName">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group form-focus">
-                    <label class="focus-label">Starting Date</label>
+                    <label class="focus-label">Procurement Date</label>
                     <div class="cal-icon">
-                        <input type="text" class="form-control floating datetimepicker" value="01/06/2002">
+                        <input type="text" class="form-control floating datetimepicker"
+                        formControlName="ProcurementDate">
                     </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Complete Date</label>
-                    <div class="cal-icon">
-                        <input type="text" class="form-control floating datetimepicker" value="31/05/2006">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Degree</label>
-                    <input type="text" class="form-control floating" value="BE Computer Science">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group form-focus">
-                    <label class="focus-label">Grade</label>
-                    <input type="text" class="form-control floating" value="Grade A">
                 </div>
             </div>
         </div>
@@ -135,31 +107,58 @@
         </div>
     </div>
     <div class="card-box">
+        <h3 class="card-title">Specialization Informations</h3>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Specialization Name</label>
+                    <input type="text" class="form-control floating" 
+                    formControlName="SpecializationName">
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Year of Experience</label>
+                    <input type="number" class="form-control floating"
+                    formControlName="YearOfExperience">
+                </div>
+            </div>
+        </div>
+        <div class="add-more">
+            <a href="#" class="btn btn-primary"><i class="fa fa-plus"></i> Add More Specialization</a>
+        </div>
+    </div>
+    <div class="card-box">
         <h3 class="card-title">Experience Informations</h3>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group form-focus">
-                    <label class="focus-label">Company Name</label>
-                    <input type="text" class="form-control floating" value="Digital Devlopment Inc">
+                    <label class="focus-label">Hospital Name</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="HospitalName">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group form-focus">
-                    <label class="focus-label">Location</label>
-                    <input type="text" class="form-control floating" value="United States">
+                    <label class="focus-label">Hospital City</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="HospitalCity">
                 </div>
+                
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group form-focus">
-                    <label class="focus-label">Job Position</label>
-                    <input type="text" class="form-control floating" value="Web Developer">
+                    <label class="focus-label">Country</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="HospitalCountry">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group form-focus">
                     <label class="focus-label">Period From</label>
                     <div class="cal-icon">
-                        <input type="text" class="form-control floating datetimepicker" value="01/07/2007">
+                        <input type="text" class="form-control floating datetimepicker"
+                        formControlName="StartDate">
                     </div>
                 </div>
             </div>
@@ -167,8 +166,51 @@
                 <div class="form-group form-focus">
                     <label class="focus-label">Period To</label>
                     <div class="cal-icon">
-                        <input type="text" class="form-control floating datetimepicker" value="08/06/2018">
+                        <input type="text" class="form-control floating datetimepicker"
+                        formControlName="EndDate">
                     </div>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Time slot in Minute</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="TimeSlot">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">First Consultation Fee</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="FirstConsultationFee">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Follow up Fee</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="FollowUpConsultationFee">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Available days</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="AvailableDays" bsDaterangepicker>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">Start Time</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="StartTime">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group form-focus">
+                    <label class="focus-label">End Time</label>
+                    <input type="text" class="form-control floating"
+                    formControlName="EndTime">
                 </div>
             </div>
         </div>
@@ -177,6 +219,6 @@
         </div>
     </div>
     <div class="text-center m-t-20">
-        <button class="btn btn-primary submit-btn" type="button">Save</button>
+        <button class="btn btn-primary submit-btn" type="submit">Save</button>
     </div>
 </form>
