--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
@@ -3,78 +3,102 @@
         <h4 class="page-title">Edit Profile</h4>
     </div>
 </div>
-<form [formGroup]="myProfileForm">
+<form [formGroup]="myProfileForm" (ngSubmit)="SubmitData()">
     <div class="card-box">
-        <h3 class="card-title">Basic Informations</h3>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="profile-img-wrap">
-                    <img class="inline-block" src="../../../../assets/img/user.jpg" alt="user">
-                    <div class="fileupload btn">
-                        <span class="btn-text">edit</span>
-                        <input class="upload" type="file">
+            <h3 class="card-title">Basic Informations</h3>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="profile-img-wrap">
+                        <img class="inline-block" src="../../../../assets/img/user.jpg" alt="user">
+                        <div class="fileupload btn">
+                            <span class="btn-text">edit</span>
+                            <input class="upload" type="file">
+                        </div>
                     </div>
-                </div>
-                <div class="profile-basic">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">First Name</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="FirstName">
+                    <div class="profile-basic">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">First Name</label>
+                                    <input type="text" class="form-control floating"
+                                    formControlName="FirstName">
+                                    <span *ngIf="!myProfileForm.get('FirstName').valid  && myProfileForm.get('FirstName').touched">
+                                        <span *ngIf="myProfileForm.get('FirstName').errors['required']">
+                                           <p style="color: red; padding-left: 3%;" class="small"> Please enter your First Name!</p>
+                                        </span>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">Last Name</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="LastName">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">Last Name</label>
+                                    <input type="text" class="form-control floating"
+                                    formControlName="LastName">
+                                    <span *ngIf="!myProfileForm.get('LastName').valid  && myProfileForm.get('LastName').touched">
+                                        <span *ngIf="myProfileForm.get('LastName').errors['required']">
+                                           <p style="color: red; padding-left: 3%;" class="small"> Please enter your Last Name!</p>
+                                        </span>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">Professional Stateme</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="ProfessionalStateme">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">Professional Stateme (Optional)</label>
+                                    <input type="text" class="form-control floating"
+                                    formControlName="ProfessionalStateme">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">Phone</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="Phone">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">Phone</label>
+                                    <input type="text" class="form-control floating"
+                                    formControlName="Phone">
+                                    <span *ngIf="!myProfileForm.get('Phone').valid  && myProfileForm.get('Phone').touched">
+                                        <span *ngIf="myProfileForm.get('Phone').errors['required']">
+                                           <p style="color: red; padding-left: 3%;" class="small"> Please enter your Phone Number!</p>
+                                        </span>
+                                        <span *ngIf="myProfileForm.get('Phone').errors.pattern">
+                                            <p style="color: red; padding-left: 3%;" class="small">Please Enter 10 digit Mobile Number!</p>
+                                        </span>
+
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">Email</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="Email">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">Email</label>
+                                    <input type="email" class="form-control floating"
+                                    formControlName="Email">
+                                    <span *ngIf="!myProfileForm.get('Email').valid  && myProfileForm.get('Email').touched">
+                                        <span *ngIf="myProfileForm.get('Email').errors['required']">
+                                           <p style="color: red; padding-left: 3%;" class="small"> Please enter your Email!</p>
+                                        </span>
+                                    </span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-focus">
-                                <label class="focus-label">Address</label>
-                                <input type="text" class="form-control floating"
-                                formControlName="Address">
+                            <div class="col-md-6">
+                                <div class="form-group form-focus">
+                                    <label class="focus-label">Address (Optional)</label>
+                                    <input type="text" class="form-control floating"
+                                    formControlName="Address">
+                                </div>
                             </div>
-                        </div>
-                      
-                        <div class="col-md-6">
-                            <div class="form-group form-focus select-focus">
-                                <label class="focus-label">Gendar</label>
-                                <select class="select form-control floating">
-                                    <option value="male selected">Male</option>
-                                    <option value="female">Female</option>
-                                </select>
+                        
+                            <div class="col-md-6">
+                                <div class="form-group form-focus select-focus">
+                                    <label class="focus-label">Gendar</label>
+                                    <select class="select form-control floating"
+                                    formControlName="Gender">
+                                        <option value="male">Male</option>
+                                        <option value="female">Female</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
-
     <div class="card-box">
         <h3 class="card-title">Education Informations</h3>
         <div class="row">
@@ -82,7 +106,7 @@
                 <div class="form-group form-focus">
                     <label class="focus-label">Institution</label>
                     <input type="text" class="form-control floating"
-                    formControlName="Institution">
+                    formControlName="InstituteName">
                 </div>
             </div>
             <div class="col-md-6">
@@ -216,6 +240,17 @@
         </div>
         <div class="add-more">
             <a href="#" class="btn btn-primary"><i class="fa fa-plus"></i> Add More Experience</a>
+        </div>
+    </div>
+
+    <div class="card-box">
+        <h3 class="card-title">About</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <textarea class="form-control" rows="7" placeholder="Write about yourself in details."
+                formControlName="About"
+                ></textarea>
+            </div>
         </div>
     </div>
     <div class="text-center m-t-20">
