--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/editmyprofile/editmyprofile.component.html
@@ -9,10 +9,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="profile-img-wrap">
-                    <img class="inline-block" src="../../../../assets/img/user.jpg" alt="user">
+                    <img class="inline-block" [src]="imageUrl" alt="user">
                     <div class="fileupload btn">
                         <span class="btn-text">edit</span>
-                        <input class="upload" type="file">
+                        <input class="upload" type="file" (change)="onFileSelected($event)">
                     </div>
                 </div>
                 <div class="profile-basic">
