login and register

--- a/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
+++ b/src/app/Admin/Doctor/doctorDashboardBody/extrapages/myprofile/myprofile.component.html
@@ -13,8 +13,7 @@
             <div class="profile-view">
                 <div class="profile-img-wrap">
                     <div class="profile-img">
-                        <a href="#"><img class="avatar"
-                                src="../../../../../../assets/img/doctors/{{myProfileData.Photo}}" alt=""></a>
+                        <a href="#"><img class="avatar" [src]="imageUrl" alt=""></a>
                     </div>
                 </div>
                 <div class="profile-basic">
